--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "takeno-uchi-ryu",
+  "name": "takenouchi-ryu",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -37,7 +37,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
