--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ENABLE_PURGE=true ng build --prod",
+    "build:prod": "ENABLE_PURGE=true ng build --prod --deploy-url https://tymfear.github.io/takenouchi-ryu/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
